--- a/ReservationMonolithic/src/main/resources/application.properties
+++ b/ReservationMonolithic/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.h2.console.enabled=true
+spring.datasource.url = jdbc:h2:file:~/test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.h2.console.path=/h2
