--- a/ReservationMicroservices/reservation/src/main/resources/application.properties
+++ b/ReservationMicroservices/reservation/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.path=/h2
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+spring.application.name=reservation
