--- a/ReservationMicroservices/user/pom.xml
+++ b/ReservationMicroservices/user/pom.xml
@@ -79,6 +79,19 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>0.9.0</version>
+                <configuration>
+                    <to>
+                        <image>gcr.io/my-project/image-built-with-jib</image>
+                    </to>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
 
